# demo

./: Cargo.toml  LICENSE  README.md  db_setup.txt
api/: Cargo.toml
api/src/: batcher.rs  lib.rs  mining_params.rs  routes.rs  server.rs  utils.rs  ws_actix.rs
db/: Cargo.toml
db/migrations/: 01_accounts_table.sql  02_supply_table.sql  05_transactions_table.sql  06_account_keys_table.sql  07_rewards_table.sql  08_global_state_roots_table.sql
db/src/: pool.rs
miner/: Cargo.toml
miner/src/: cpu_miner.rs  lib.rs  main.rs
models/: Cargo.toml
models/src/: account.rs  lib.rs  utils.rs
src/: main.rs
wallet_core/: Cargo.toml
wallet_core/src/: encryption.rs  lib.rs  routes.rs
wallet_web/: Cargo.toml  Trunk.toml  index.html
wallet_web/src/: lib.rs
