[package]
name = "winterbank"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "api",
    "db",
    "models",
    "miner",
]
resolver = "2"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.5"
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
redis = { version = "0.27.6", features = ["aio", "tokio-comp"] }


api = { path = "./api" }
db = { path = "./db" }
miner = { path = "./miner" }

