[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
tokio = { version = "1.41.1", features = ["full"] }
rand = "0.8.5"
log = "0.4.22"
hex = "0.4.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.94"

[[bin]]
name = "miner"
path = "src/main.rs"