[package]
name = "wallet_core"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# For making HTTP requests to your WinterBank API
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
async-std = { version = "1.7.0", features = ["attributes"] }
hex = "0.4.3"
blake3 = "1.5.5"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
anyhow = "1.0.94"
thiserror = "2.0.9"
getrandom = { version = "0.2.15", features = ["js"] }
gloo-net = "0.6.0"

# Argon2-based encryption
argon2 = "0.5.3"
password-hash = "0.5.0"

# Logging (optional)
log = "0.4.22"

